Fixed dark mode toggle dragging and selecting

--- a/app.css
+++ b/app.css
@@ -301,6 +301,13 @@ input:checked + .slider:before {
   height: 23px;
   width: 23px;
   margin: 0 5px;
+
+  pointer-events: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 /* Hero */
